Fix spurious ancient references in manual.

--- a/doc/poddoc/man/gbch-r.1
+++ b/doc/poddoc/man/gbch-r.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "GBCH-R 1"
-.TH GBCH-R 1 "2009-05-18" "GNUbatch Release 1" "GNUbatch Batch Scheduler"
+.TH GBCH-R 1 "2010-03-05" "GNUbatch Release 1" "GNUbatch Batch Scheduler"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -170,9 +170,7 @@ help file is \f(CW\*(C`BTRESTCONF\*(C'\fR.
 .PP
 We regret having run out of single letters for options to \fBgbch-r\fR
 and \fBgbch-rr\fR and having had to resort in three cases to
-non-alphabetic options. The \fBbts\fR command in \fBGNUbatch2\fR (Xi-Batch
-Rel 7) introduces the new concept of \fItemplates\fR carrying most of the
-information supplied as options to \fBgbch-r\fR.
+non-alphabetic options.
 .IP "\-? or +explain" 4
 .IX Item "-? or +explain"
 causes a summary of the other options to be displayed without taking
