--- a/doc/poddoc/pod/gbch-rr.1
+++ b/doc/poddoc/pod/gbch-rr.1
@@ -43,9 +43,7 @@ help file is C<BTRESTCONF>.
 
 We regret having run out of single letters for options to B<gbch-r>
 and B<gbch-rr> and having had to resort in three cases to
-non-alphabetic options. The B<bts> command in B<GNUbatch2> (Xi-Batch
-Rel 7) introduces the new concept of I<templates> carrying most of the
-information supplied as options to B<gbch-r>.
+non-alphabetic options.
 
 =over 4
 
