Add options for dumping/loading jobs to single XML file.

--- a/doc/latexdoc/Refman/chp-user-programs.tex
+++ b/doc/latexdoc/Refman/chp-user-programs.tex
@@ -301,6 +301,7 @@ The default value of \helppathvar{} is \filename{.:!:\~:@} giving the interpreta
 
 \section{Submitting Batch Jobs}
 \input{ucmds/btr.tex}
+\input{ucmds/bts.tex}
 \input{ucmds/atcover.tex}
 \input{ucmds/xmbtr.tex}
 \section{Managing the batch scheduler}
@@ -358,6 +359,7 @@ The following commands are provided for the web browser interface support and ar
 \section{System file management}
 \input{ucmds/xb-btuconv.tex}
 \input{ucmds/xb-cjlist.tex}
+\input{ucmds/xb-cjlistx.tex}
 \input{ucmds/xb-cvlist.tex}
 \input{ucmds/xb-ciconv.tex}
 \input{ucmds/xb-ripc.tex}
