--- a/doc/latexdoc/Refman/ucmds/xb-cjlist.tex
+++ b/doc/latexdoc/Refman/ucmds/xb-cjlist.tex
@@ -77,6 +77,11 @@ option.
 
 Do not check user names in the saved job file.
 
+\cmdoption{I}{}{delimiter}{delimiter}
+
+Rather than use a directory for saved jobs, put the job scripts inline as ``here'' documents in the shell script file, using
+the specified delimiter and the job number to delimit the jobs.
+
 \IfXi{\cmdoption{v}{}{number}{version}
 
 Tell \PrXbCjlist{} that the jobs file is for release number of \ProductName{}, where number
