--- a/doc/latexdoc/tex/gnubatch-defs.sty
+++ b/doc/latexdoc/tex/gnubatch-defs.sty
@@ -49,6 +49,8 @@
 \newcommand\batchuser{\filename{\batchusername}}
 \newcommand\spooluser{\filename{\spoolusername}}
 
+\newcommand\batchjobsuffix{\filename{.gbj1}}
+
 %Names of programs so we can easily switch doc to and from GNUbatch
 
 \newcommand\BtchargeName{gbch-charge}
@@ -79,6 +81,8 @@
 \newcommand\BtquitName{gbch-quit}
 \newcommand\BtrName{gbch-r}
 \newcommand\BtrVarname{GBCH\_R}
+\newcommand\BtsName{gbch-s}
+\newcommand\BtsVarname{GBCH\_S}
 \newcommand\RbtrName{gbch-rr}
 \newcommand\RbtrVarname{GBCH\_RR}
 \newcommand\BtstartName{gbch-start}
@@ -100,6 +104,7 @@
 \newcommand\XbChecklicName{HIS SHOULDNT BE HERE}
 \newcommand\XbCiconvName{gbch-ciconv}
 \newcommand\XbCjlistName{gbch-cjlist}
+\newcommand\XbCjlistxName{gbch-cjlistx}
 \newcommand\XbCvlistName{gbch-cvlist}
 \newcommand\XbEmerglicName{THIS SHOULDNT BE HERE}
 \newcommand\XbRipcName{gbch-ripc}
@@ -137,6 +142,7 @@
 \newcommand\PrBtq{\progname{\BtqName}}
 \newcommand\PrBtquit{\progname{\BtquitName}}
 \newcommand\PrBtr{\progname{\BtrName}}
+\newcommand\PrBts{\progname{\BtsName}}
 \newcommand\PrRbtr{\progname{\RbtrName}}
 \newcommand\PrBtstart{\progname{\BtstartName}}
 \newcommand\PrBtuchange{\progname{\BtuchangeName}}
@@ -151,6 +157,7 @@
 \newcommand\PrXbChecklic{\progname{\XbChecklicName}}
 \newcommand\PrXbCiconv{\progname{\XbCiconvName}}
 \newcommand\PrXbCjlist{\progname{\XbCjlistName}}
+\newcommand\PrXbCjlistx{\progname{\XbCjlistxName}}
 \newcommand\PrXbCvlist{\progname{\XbCvlistName}}
 \newcommand\PrXbEmerglic{\progname{\XbEmerglicName}}
 \newcommand\PrXbRipc{\progname{\XbRipcName}}
