--- a/doc/latexdoc/Refman/chp-jobs-and-related-entities.tex
+++ b/doc/latexdoc/Refman/chp-jobs-and-related-entities.tex
@@ -309,7 +309,7 @@ the submitting machine.
 \subsection{Environment Variables}
 The job specification holds a list of environment variables that are set up in the job's environment each time it is run. At
 run time the scheduler first sets up any environment variables that are specified in the \batchenv{} file. The
-variables from the job specification are then added to the environment.
+variables from the job specification are then added to the environment. Please see page \pageref{Staticenv} for more details.
 
 Symbols for meta-data can also be included in the values of environment variables. See the section on Meta-Data on page \pageref{bkm:Metadata} for a list of the available data.
 
