--- a/doc/latexdoc/Refman/chp-overview.tex
+++ b/doc/latexdoc/Refman/chp-overview.tex
@@ -316,7 +316,7 @@ The final entry gives a default user if a named user is not found in the file.
 UNIX users not found on the host are silently ignored.
 
 \subsubsection{\manualProduct{} Static Environment File}
-To avoid every job having to have all the environment variables in it, thus saving space, the static environment file,
+\label{SEfiles}To avoid every job having to have all the environment variables in it, thus saving space, the static environment file,
 \batchenv{}, is provided. The commands that submit jobs will only store ``differences'' from this file in each job.
 This is provided to avoid saving large amounts of environment information with each job.
 
@@ -328,7 +328,8 @@ BATCHENV:file1,file2....
 
 \end{expara}
 
-These files are read in sequence and constitute the new environment.
+These files are read in sequence and constitute the new environment. For more information about the format
+of these files, see page \pageref{Staticenv}.
 
 \section{Job and Variable Modes}
 Each job and variable is given a \textit{protection mode}. This consists of a set of permissions dictating how various users may, or may not,
